--- a/.gitignore
+++ b/.gitignore
@@ -4,21 +4,8 @@
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
+**/.DS_Store
+**/build/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+*.xcworkspacedata
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
