--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,9 +20,11 @@ koalaplot = "0.5.1"
 kotlin = "1.9.21"
 kotlinx-coroutines = "1.8.0-RC"
 ktor = "3.0.0-wasm2"
-multiplatformSettings = "1.1.1"
 voyager= "1.0.0"
 buildkonfig = "0.15.1"
+mpFilePicker = "3.1.0"
+markdownRenderer = "0.13.0-a01"
+
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -42,6 +44,8 @@ compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview"
 compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
 compose-material = { module = "androidx.compose.material:material", version.ref = "compose" }
 compose-window-size = { module = "dev.chrisbanes.material3:material3-window-size-class-multiplatform", version.ref = "composeWindowSize" }
+mpfilepicker = { module = "com.darkrockstudios:mpfilepicker", version.ref = "mpFilePicker" }
+markdown-renderer = { module = "com.mikepenz:multiplatform-markdown-renderer-m3", version.ref = "markdownRenderer" }
 
 
 kotlinx-coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
@@ -62,13 +66,9 @@ voyager = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voy
 imageLoader = { module = "io.github.qdsfdhvh:image-loader", version.ref = "imageLoader" }
 koalaplot = { module = "io.github.koalaplot:koalaplot-core", version.ref = "koalaplot" }
 
-multiplatform-settings = { module = "com.russhwolf:multiplatform-settings", version.ref = "multiplatformSettings" }
-multiplatform-settings-coroutines = { module = "com.russhwolf:multiplatform-settings-coroutines", version.ref = "multiplatformSettings" }
-
 
 [bundles]
 ktor-common = ["ktor-client-core", "ktor-client-json", "ktor-client-logging", "ktor-client-serialization", "ktor-client-content-negotiation", "ktor-serialization-kotlinx-json"]
-multiplatform-settings = ["multiplatform-settings"] #, "multiplatform-settings-coroutines"]
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
