--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,32 +1,32 @@
 [versions]
-agp = "8.2.1"
+agp = "8.2.2"
 android-compileSdk = "34"
 android-minSdk = "24"
 android-targetSdk = "34"
-androidx-activityCompose = "1.8.1"
+androidx-activityCompose = "1.8.2"
 androidx-appcompat = "1.6.1"
 androidx-constraintlayout = "2.1.4"
 androidx-core-ktx = "1.12.0"
 androidx-espresso-core = "3.5.1"
 androidx-material = "1.11.0"
 androidx-test-junit = "1.1.5"
-compose = "1.5.4"
-compose-compiler = "1.5.7"
-compose-plugin = "1.6.0-alpha01"
-composeWindowSize = "0.5.0-alpha03"
-generativeai = "0.1.2-0.0.1-wasm"
-horologist = "0.5.19"
-imageLoader = "1.7.1"
+compose = "1.6.2"
+compose-compiler = "1.5.8"
+compose-plugin = "1.6.0"
+composeWindowSize = "0.5.0"
+generativeai = "0.2.1-1.0.0-wasm"
+horologist = "0.6.3"
+imageLoader = "1.7.7"
 junit = "4.13.2"
 koalaplot = "0.5.1"
-kotlin = "1.9.21"
-kotlinx-coroutines = "1.8.0-RC"
+kotlin = "1.9.22"
+kotlinx-coroutines = "1.8.0"
 ktor = "3.0.0-wasm2"
 voyager= "1.0.0"
 buildkonfig = "0.15.1"
 mpFilePicker = "3.1.0"
-markdownRenderer = "0.13.0-a01"
-
+markdownRenderer = "0.13.0"
+wearCompose = "1.3.0"
 
 [libraries]
 generativeai = { module = "dev.shreyaspatil.generativeai:generativeai-google", version.ref = "generativeai" }
@@ -40,6 +40,8 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 androidx-material = { group = "com.google.android.material", name = "material", version.ref = "androidx-material" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "androidx-constraintlayout" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
+
+androidx-wear-compose-navigation = { module = "androidx.wear.compose:compose-navigation", version.ref = "wearCompose" }
 
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
