--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,22 +10,22 @@ androidx-core-ktx = "1.12.0"
 androidx-espresso-core = "3.5.1"
 androidx-material = "1.11.0"
 androidx-test-junit = "1.1.5"
-compose = "1.6.4"
+compose = "1.6.5"
 compose-compiler = "1.5.8"
-compose-plugin = "1.6.1"
+compose-plugin = "1.6.2"
 composeWindowSize = "0.5.0"
 generativeai = "0.2.2-1.0.0-wasm"
-horologist = "0.6.6"
+horologist = "0.6.8"
 imageLoader = "1.7.8"
 junit = "4.13.2"
-kotlin = "1.9.22"
+kotlin = "2.0.0-RC1"
 kotlinx-coroutines = "1.8.0"
 ktor = "3.0.0-wasm2"
 voyager= "1.0.0"
 buildkonfig = "0.15.1"
 mpFilePicker = "3.1.0"
 markdownRenderer = "0.14.0"
-wearCompose = "1.3.0"
+wearCompose = "1.3.1"
 
 [libraries]
 generativeai = { module = "dev.shreyaspatil.generativeai:generativeai-google", version.ref = "generativeai" }
@@ -55,7 +55,7 @@ markdown-renderer-core = { module = "com.mikepenz:multiplatform-markdown-rendere
 horologist-composables = { module = "com.google.android.horologist:horologist-composables", version.ref = "horologist" }
 horologist-compose-layout = { module = "com.google.android.horologist:horologist-compose-layout", version.ref = "horologist" }
 horologist-ai-ui = { module = "com.google.android.horologist:horologist-ai-ui", version.ref = "horologist" }
-compose-material-iconsext = "androidx.compose.material:material-icons-extended:1.5.4"
+compose-material-iconsext = "androidx.compose.material:material-icons-extended:1.6.5"
 
 kotlinx-coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 
