--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
-kotlin = "2.0.0"
+kotlin = "2.0.10"
 kotlinx-coroutines = "1.8.1"
 
 
-agp = "8.4.1"
+agp = "8.5.2"
 android-compileSdk = "34"
 android-minSdk = "24"
 android-targetSdk = "34"
@@ -11,12 +11,12 @@ androidx-activityCompose = "1.9.0"
 compose = "1.6.7"
 compose-plugin = "1.6.10"
 composeWindowSize = "0.5.0"
+filekit = "0.8.0"
 generativeai = "0.5.0-1.0.0-wasm"
 horologist = "0.6.12"
 junit = "4.13.2"
 voyager= "1.0.0"
 buildkonfig = "0.15.1"
-mpFilePicker = "3.1.0"
 markdownRenderer = "0.16.0"
 wearCompose = "1.3.1"
 
@@ -32,7 +32,9 @@ compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = 
 compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
 compose-window-size = { module = "dev.chrisbanes.material3:material3-window-size-class-multiplatform", version.ref = "composeWindowSize" }
-mpfilepicker = { module = "com.darkrockstudios:mpfilepicker", version.ref = "mpFilePicker" }
+
+filekit-compose = { module = "io.github.vinceglb:filekit-compose", version.ref = "filekit" }
+
 markdown-renderer = { module = "com.mikepenz:multiplatform-markdown-renderer-m3", version.ref = "markdownRenderer" }
 markdown-renderer-core = { module = "com.mikepenz:multiplatform-markdown-renderer", version.ref = "markdownRenderer" }
 
