--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,24 @@
 [versions]
-kotlin = "2.0.10"
-kotlinx-coroutines = "1.8.1"
+kotlin = "2.0.20"
+kotlinx-coroutines = "1.9.0"
 
 
 agp = "8.5.2"
 android-compileSdk = "34"
 android-minSdk = "24"
 android-targetSdk = "34"
-androidx-activityCompose = "1.9.0"
-compose = "1.6.7"
-compose-plugin = "1.6.10"
+androidx-activityCompose = "1.9.2"
+compose = "1.7.2"
+compose-plugin = "1.7.0-beta02"
 composeWindowSize = "0.5.0"
 filekit = "0.8.0"
-generativeai = "0.5.0-1.0.0-wasm"
-horologist = "0.6.12"
+generativeai = "0.9.0-1.0.1-wasm"
+horologist = "0.6.20"
 junit = "4.13.2"
 voyager= "1.0.0"
-buildkonfig = "0.15.1"
-markdownRenderer = "0.16.0"
-wearCompose = "1.3.1"
+buildkonfig = "0.15.2"
+markdownRenderer = "0.26.0"
+wearCompose = "1.4.0"
 
 [libraries]
 kotlinx-coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
