impl theme and special ui  for desktop and web

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,6 @@
 kotlin = "2.1.0"
 kotlinx-coroutines = "1.9.0"
 
-
 agp = "8.7.2"
 android-compileSdk = "34"
 android-minSdk = "24"
@@ -19,9 +18,14 @@ voyager= "1.0.0"
 buildkonfig = "0.15.2"
 markdownRenderer = "0.26.0"
 wearCompose = "1.4.0"
+dataStore = "1.1.2"
+voyagerVersion = "1.1.0-beta02"
 
 [libraries]
-kotlinx-coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
+kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
+kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
+kotlinx-coroutines-swing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
 
 generativeai = { module = "dev.shreyaspatil.generativeai:generativeai-google", version.ref = "generativeai" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
@@ -43,8 +47,12 @@ horologist-compose-layout = { module = "com.google.android.horologist:horologist
 horologist-ai-ui = { module = "com.google.android.horologist:horologist-ai-ui", version.ref = "horologist" }
 compose-material-iconsext = "androidx.compose.material:material-icons-extended:1.7.5"
 
-voyager = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
 desugar = "com.android.tools:desugar_jdk_libs:2.1.2"
+datastore-core = { group = "androidx.datastore", name = "datastore-core-okio", version.ref = "dataStore" }
+datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences-core", version.ref = "dataStore" }
+voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyagerVersion" }
+voyager-screenmodel = { module = "cafe.adriel.voyager:voyager-screenmodel", version.ref = "voyagerVersion" }
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
