--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,11 +14,11 @@ filekit = "0.8.0"
 generativeai = "0.9.0-1.0.1-wasm"
 horologist = "0.6.20"
 junit = "4.13.2"
+multiplatformSettings = "1.3.0"
 voyager= "1.0.0"
 buildkonfig = "0.15.2"
 markdownRenderer = "0.26.0"
 wearCompose = "1.4.0"
-dataStore = "1.1.2"
 voyagerVersion = "1.1.0-beta02"
 
 [libraries]
@@ -48,8 +48,8 @@ horologist-ai-ui = { module = "com.google.android.horologist:horologist-ai-ui", 
 compose-material-iconsext = "androidx.compose.material:material-icons-extended:1.7.5"
 
 desugar = "com.android.tools:desugar_jdk_libs:2.1.2"
-datastore-core = { group = "androidx.datastore", name = "datastore-core-okio", version.ref = "dataStore" }
-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences-core", version.ref = "dataStore" }
+multiplatform-settings = { module = "com.russhwolf:multiplatform-settings", version.ref = "multiplatformSettings" }
+multiplatform-settings-coroutines = { module = "com.russhwolf:multiplatform-settings-coroutines", version.ref = "multiplatformSettings" }
 voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyagerVersion" }
 voyager-screenmodel = { module = "cafe.adriel.voyager:voyager-screenmodel", version.ref = "voyagerVersion" }
 
