minor bugs fix, sqldelight and time

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ android.nonTransitiveRClass=true
 android.useAndroidX=true
 
 #Compose
+org.jetbrains.compose.experimental.jscanvas.enabled=true
 org.jetbrains.compose.experimental.wasm.enabled=true
 
 #MPP
