dependency, ui and gradle updates

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,32 @@
 kotlin.code.style=official
 
-#Gradle
+# Gradle
 org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+# Enable Gradle performance features
+org.gradle.parallel=true
+org.gradle.configuration-cache=true
+org.gradle.caching=true
+org.gradle.vfs.watch=true
+# Keep daemon enabled (default true, but explicit for clarity)
+org.gradle.daemon=true
 
-
-#Android
+# Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 
-#Compose
+# Compose
 org.jetbrains.compose.experimental.jscanvas.enabled=true
 org.jetbrains.compose.experimental.wasm.enabled=true
 
-#MPP
+# Kotlin incremental compilation
+kotlin.incremental=true
+kotlin.incremental.js=true
+kotlin.incremental.multiplatform=true
+
+# MPP
 kotlin.mpp.androidSourceSetLayoutVersion=2
 kotlin.mpp.enableCInteropCommonization=true
 
-#Development
+# Development
 development=true
 kotlin.native.ignoreDisabledTargets=true
